fix: success color for dark mode

--- a/packages/react-ui/src/styles.css
+++ b/packages/react-ui/src/styles.css
@@ -94,7 +94,7 @@
   --primary-foreground: 210 90% 98%;
 
   --success-100: 140 60% 40%;
-  --success: 140 80% 50%;
+  --success: 140 74% 38%;
   --success-300: 140 90% 85%;
 
   --destructive-100: 0 70% 38%;
